# langgraph-ecommerce

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  struct.md
docs/: GEMINI_QUICKSTART.md  architecture.md  bugfixes.md  chat_storage.md  curl_examples.md  gemini_integration.md  graphs_explained.md  intent_classification_troubleshooting.md  llm_providers.md  llm_tracking.md  lm_studio_embeddings.md  metadata_guide.md  mongodb-setup.md  order_payment_flow.md  rag_mixed_providers.md  rag_system.md  real_payment_system.md  seed-data-guide.md  test_payment_workflow.md  test_workflow_prompts.md  tidb_refactoring.md  vector_search_api.md
docs/fixes/: import-error-fix.md  payment-intent-fix.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/: aiskill.md  components-ready.md  payment-guide.md  payment-update.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatContainer.tsx  IntentBadge.tsx  MessageInput.tsx  MessageList.tsx  OrderSummary.tsx  PaymentCard.tsx  ProductCard.tsx  RagToggle.tsx
frontend/src/services/: api.ts  chatService.ts  orderService.ts  paymentService.ts  productService.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: api.ts  chat.ts
frontend/src/utils/: responseParser.ts
scripts/: create_tidb_schema.sql  curl_examples.sh  run_seed.sh  seed_database.sh  test_all_flows.sh  test_all_providers.py  test_gemini.py  test_llm_tracking.py  test_mongodb.py  test_payment_workflow.py  test_product_service.py  test_workflow.py  verify_data.py
src/: __init__.py
src/agents/: __init__.py  base.py  conversation.py  escalation.py  faq.py  intent_classifier.py  order.py  payment.py  product_search.py  rag.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  chat.py  orders.py  payment.py  products.py  rag.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/database/: __init__.py  models.py  mongodb.py  seed_data.py  tidb.py
src/graphs/: __init__.py  chat_workflow.py  manual_rag_workflow.py  nodes.py  payment_workflow.py  rag_workflow.py
src/memory/: __init__.py  checkpoints.py  conversation.py
src/models/: __init__.py  enums.py  schemas.py  session_context.py
src/prompts/: __init__.py  agent_prompts.py  system_prompts.py
src/services/: __init__.py  context_service.py  document_service.py  llm_service.py  llm_wrapper.py  lm_studio_embeddings.py  order_service.py  product_service.py  vector_store.py
src/state/: __init__.py  agent_state.py  graph_state.py
src/tools/: __init__.py  payment_processor.py  retriever.py
src/utils/: __init__.py  helpers.py  retry.py  validators.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agents.py
